# ModelScope-Manager

./: .gitignore  Makefile  README.md  build.spec  pyproject.toml  requirements.txt  run.py
core/: __init__.py  account_service.py  account_store.py  account_validation.py  api_key_provider.py  app_paths.py  config_manager.py  errors.py  model_list_logic.py  model_service.py  modelscope_client.py  modelscope_service.py
demo/: list_models.py
gui/: config.toml  main.py
gui/controllers/: account_manage_controller.py  main_window_controller.py  model_list_controller.py
gui/controllers/app/: account_manage_app.py  main_window_app.py  model_list_app.py  workers.py
gui/controllers/ui_bindings/: account_manage_binding.py  main_window_binding.py  model_list_binding.py
gui/func/: func_account_manage.py  func_mainwindow.py  func_model_list.py
gui/gui/: config.toml
gui/ui/: messages.py  ui_account_manage.py  ui_mainwindow.py  ui_model_item.py  ui_model_list.py  ui_paths.py
gui/utils/: app_paths.py  config_manager.py  workers.py
